chahan first commit

--- a/pages/chahan/niza.html
+++ b/pages/chahan/niza.html
@@ -28,8 +28,8 @@
                         <div class="border-box"></div>
                     </div>
                     <div class="about-intro-en">
-                        <h3 class="fs-ml fc-main fw-medium">Name: Hideto Kawatani</h3>
-                        <h3 class="fs-ml fc-main fw-medium">Birthday: 1997.02.18</h3>
+                        <h3 class="fs-ml fc-main fw-medium">Name: Chahan Ki</h3>
+                        <h3 class="fs-ml fc-main fw-medium">Birthday: 1996.10.12</h3>
                         <h3 class="fs-ml fc-main fw-medium">University: Yokohama National University</h3>
                         <h3 class="fs-ml fc-main fw-medium">Hobbies: Photograph Game</h3>
                     </div>
