めっちゃ変えた

--- a/pages/apple/index.html
+++ b/pages/apple/index.html
@@ -10,6 +10,6 @@
         
         <img class="container" src="img/profile.jpg" alt="">
 
-        <a href="https://www.facebook.com/rintaro.kudo.58"><p class="under">あっぷる</p></a>
+        <a href="https://www.facebook.com/rintaro.kudo.58" target="_blank"><p class="under">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;あっぷる&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p></a>
 </body>
 </html>
