--- a/pages/nino/index.html
+++ b/pages/nino/index.html
@@ -1,1 +1,6 @@
-だう
+<body>
+    <header>
+      <h1 class="nametitle">NinomiyaSatoshi</h1>
+      <img src="/Users/ninomiyasatoshi/Desktop/Photos/0-16.jpg" width="500px">
+    </header>
+  </body>
