--- a/pages/eimy/index.html
+++ b/pages/eimy/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <title>Eimy</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
 </head>
 <body>
-  <h1>20 years old</h1>
+  <h1>♡Eimy♡</h1>
    <img src="eimy.png" alt="">
-   
+   <section>
+       <h1>University</h1>
+   </section>
     
 </body>
 </html>
