--- a/pages/yuiponzu/index.html
+++ b/pages/yuiponzu/index.html
@@ -3,8 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>YUIPONZU</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Comfortaa|Pacifico" rel="stylesheet">
 </head>
 <body>
-    
+    <h1>YUIPONZU</h1>
+    <div class="name">
+    <img src="bunbun.JPG" alt="" width="300">
+    <h2>Twitter</h2>
+    <p></p>
+    </div>
 </body>
 </html>
