--- a/pages/yuiponzu/index.html
+++ b/pages/yuiponzu/index.html
@@ -11,8 +11,12 @@
     <h1>YUIPONZU</h1>
     <div class="name">
     <img src="bunbun.JPG" alt="" width="300">
+    <div class="text">
     <h2>Twitter</h2>
-    <p></p>
+    <a href="https://twitter.com/yuiponzu43">@yuiponzu43</a>
+    <h2>Instagram</h2>
+    <a href="https://www.instagram.com/yuitarosan/">YUITAROSAN</a>
+    </div>
     </div>
 </body>
 </html>
