add university image

--- a/pages/eimy/index.html
+++ b/pages/eimy/index.html
@@ -9,8 +9,9 @@
 <body>
   <h1>♡Eimy♡</h1>
    <img src="eimy.png" alt="">
-   <section>
+   <section id="university">
        <h1>University</h1>
+       <img src="https://pds.exblog.jp/pds/1/201211/16/60/c0042960_20245028.jpg" alt="">
    </section>
     
 </body>
