チャーハンだおー

--- a/pages/chahan/niza.html
+++ b/pages/chahan/niza.html
@@ -6,10 +6,10 @@
         <title>Hideto Kawatani Portoflio 2018</title>
         <link rel="icon" href="/00_icon.jpg">
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,500i,700" rel="stylesheet">
-        <link rel="stylesheet" href="niza.css">
+        <link rel="stylesheet" href="tosh.css">
         <script src="jquery.js"></script>
         <script src="fullpage.min.js"></script>
-        <script src="niza.js"></script>
+        <script src="tosh.js"></script>
     </head>
 
     <body>
@@ -34,10 +34,11 @@
                         <h3 class="fs-ml fc-main fw-medium">Hobbies: Photograph Game</h3>
                     </div>
                     <p class="about-intro-ja fc-main">
-                        横浜国立大学3年/応用化学専攻。化学専攻で2015年に大学に入学。<br>
+                        <!-- 横浜国立大学3年(留年します)/応用化学専攻。化学専攻で2015年に大学に入学。<br>
                         しかし、2年生にして、友達の勧めによりプログラミングを始める。<br>
                         2017秋学期より休学したのち<span class="text-empasis">エンジニアとしてインターン</span>を始める。<br>
-                        現在は中高生にゲーム作成やiPhoneアプリ開発を教える講師を務める他、engineerをしている<br>
+                        現在は中高生にゲーム作成やiPhoneアプリ開発を教える講師を務める他、engineerをしている<br> -->
+                        としだよー！
                     </p>
                 </content>
                 <img class="about-image" src="02_about.png" alt="about">
