--- a/pages/captain/index.html
+++ b/pages/captain/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>CAPTAIN</h1>
+    <header>
+      <h1>CAPTAIN</h1>
+    </header>
 </body>
 </html>
