--- a/pages/shusuke/index.html
+++ b/pages/shusuke/index.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <h1>Introduce</h1>
+    <p>私の名前はシュースケです。</p>
+    <img src="photo1.png" alt="" width="100%">
 </head>
 
 <body>
