--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>2018Shapes</title>
     <link rel="stylesheet" href="/assets/style.css">
     <link rel="stylesheet" href="/assets/reset.css">
+    <link rel="stylesheet" href="haiji.css">
 </head>
 <body class="top">
 </body>
