--- a/pages/patra/about.html
+++ b/pages/patra/about.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>patra</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  
+  <div class="top">
+  <link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
+   <img src="IMG_0315.JPG" width="500">
+   <h1>Patra</h1>
+   <p></p>
+   </div>
     
 </body>
 </html>
