--- a/pages/nurse/名称未設定-1.html
+++ b/pages/nurse/名称未設定-1.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
 </head>
 <body>
-    
+   <img src="IMG_0818.JPG" alt=""> 
 </body>
 </html>
