--- a/pages/ed/index.html
+++ b/pages/ed/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Edward</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Kosugi+Maru|Thasadith" rel="stylesheet">
 </head>
 
 <body>
