--- a/pages/tenor/index.html
+++ b/pages/tenor/index.html
@@ -10,10 +10,12 @@
 <body>
     <header>
         <h1>Hinako Terakara</h1>
+        <a href="#">GET IN TOUCH</a>
 
     </header>
     
     <section>
+       ME
         <img src="tenor.JPG" alt="" width="300">
     </section>
 </body>
