--- a/pages/nurse/index.html
+++ b/pages/nurse/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-  <div class=intro>
+  <div class="intro">
       <img src="IMG_0818.JPG" alt=""> 
       <p>Nurse</p>
   </div>
