--- a/pages/haiji/index.html
+++ b/pages/haiji/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+<head>s
     <meta charset="UTF-8">
     <title>Document</title>
-    <link rel="stylesheet" href="/haiji.css">
+    <link rel="stylesheet" href="/pages/haiji/haiji.css">
 </head>
 
 <body>
