--- a/pages/tenor/index.html
+++ b/pages/tenor/index.html
@@ -14,7 +14,7 @@
 
     </header>
     
-    <section>
+    <section class="aboutme">
        ME
         <img src="tenor.JPG" alt="" width="300">
     </section>
