--- a/pages/patra/about.html
+++ b/pages/patra/about.html
@@ -8,10 +8,15 @@
 <body>
   
   <div class="top">
+  
   <link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
-   <img src="IMG_0315.JPG" width="500">
+  
+   <img src="IMG_0508.JPG">
+   
    <h1>Patra</h1>
    <p></p>
+   
+   
    </div>
     
 </body>
