add university informtion

--- a/pages/eimy/index.html
+++ b/pages/eimy/index.html
@@ -12,6 +12,12 @@
    <section id="university">
        <h1>University</h1>
        <img src="https://pds.exblog.jp/pds/1/201211/16/60/c0042960_20245028.jpg" alt="">
+       <div class="box">
+           <p>Sophia University</p>
+           <p>Major: Information Technology</p>
+            <p>Community: Sophia Festival Staff</p>
+       </div>
+       
    </section>
     
 </body>
