--- a/pages/nino/index.html
+++ b/pages/nino/index.html
@@ -4,7 +4,7 @@
    <head>
     <header>
       <h1 class="nametitle">NinomiyaSatoshi</h1>
-      <img src="/Users/ninomiyasatoshi/Desktop/Photos/0-16.jpg" width="500px">
+      <img src="images/0-16.jpg" width="500px">
     </header>
       </head>
   <body>
