--- a/pages/yuiponzu/index.html
+++ b/pages/yuiponzu/index.html
@@ -16,7 +16,7 @@
             <h2>Twitter</h2>
             <a href="https://twitter.com/yuiponzu43">@yuiponzu43</a>
             <h2>Instagram</h2>
-            <a href="https://www.instagram.com/yuitarosan/">YUITAROSAN</a>
+            <a href="https://www.instagram.com/yuitarosan/">@YUITAROSAN</a>
         </div>
     </div>
 </body>
